# posixutils

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  asa.c  basename.c  cat.c  cat.cc  chown.c  cksum.c  cksum_crctab.h  cmp.c  comm.c  compress.c  configure.ac  date.c  df.c  dirname.c  du.c  echo.c  env.c  env.cc  false.c  gen-strmap.pl  getconf-confstr.data  getconf-path.data  getconf-system.data  getconf.c  grep.c  head.c  head.cc  id.c  ipcrm.c  ipcs.c  ipcs.cc  kill.c  (+47 more)
asa/: .gitignore  Makefile.am  Makefile.include  asa-test  asa-test.in1  asa-test.out1  asa.1  asa.cc
basename/: .gitignore  Makefile.am  Makefile.include  basename-test  basename-tests.json  basename.1  basename.cc
build-aux/: .gitignore
cat/: .gitignore  Makefile.am  Makefile.include  cat-test  cat.1
chown/: .gitignore  Makefile.am  Makefile.include  chown.1  chown.cc
cksum/: .gitignore  Makefile.am  Makefile.include  cksum-test  cksum-test.data2  cksum.cc  test.data  test.data2
cmp/: .gitignore  Makefile.am  Makefile.include  cmp-test  cmp.cc
comm/: .gitignore  Makefile.am  Makefile.include  comm.1  comm.cc
compress/: .gitignore  Makefile.am  Makefile.include  compress.c  compress.cc  zopen.c  zopen.cc  zopen.h
date/: .gitignore  Makefile.am  Makefile.include  date-test  date.1  date.cc
df/: .gitignore  Makefile.am  Makefile.include  df-test  df.1  df.cc
diff/: .gitignore  Makefile.am  Makefile.include  diff.1  diff.cc
dirname/: .gitignore  Makefile.am  Makefile.include  dirname-test  dirname-test.data  dirname-tests.json  dirname.1  dirname.cc
doc/: Makefile.am  new-util.txt  opengroup-docs.txt  roadmap.md  roadmap.txt  util-groups.txt
doc/status/: Makefile.am  UNIMPLEMENTED  asa.status  basename.status  cat.status  cksum.status  cmp.status  comm.status  compress.status  date.status  df.status  dirname.status  echo.status  env.status  false.status  getconf.status  grep.status  head.status  id.status  ipcrm.status  ipcs.status  kill.status  link.status  ln.status  logger.status  logname.status  mesg.status  mkdir.status  mkfifo.status  mv.status  nice.status  nohup.status  pathchk.status  pwd.status  renice.status  rm.status  rmdir.status  sleep.status  strings.status  stty.status  (+16 more)
echo/: .gitignore  Makefile.am  Makefile.include  echo-test  echo.cc
env/: .gitignore  Makefile.am  Makefile.include  env-test  env.1  env.cc
expand/: .gitignore  Makefile.include  expand-test  expand-tests.json  expand.1  expand.cc  test.in  test1.out  test2.out  test3.out
expr/: .gitignore  Makefile.am  Makefile.include  expr-parse.y  expr-test  expr-tests.json  expr.1  expr.cc
false/: .gitignore  Makefile.am  Makefile.include  false-test  false-tests.json  false.1  false.c
getconf/: .gitignore  Makefile.am  Makefile.include  getconf-confstr.data  getconf-path.data  getconf-system.data  getconf-test  getconf.1  getconf.cc
grep/: .gitignore  Makefile.am  Makefile.include  grep-test  grep.1  grep.cc  test1.out
head/: .gitignore  Makefile.am  Makefile.include  head-test  head.1  head.cc  test1.in  test1.out
id/: .gitignore  Makefile.am  Makefile.include  id-test  id.1  id.cc
include/: Makefile.am  libcompress.h  libpu.h
ipcrm/: .gitignore  Makefile.am  Makefile.include  ipcrm.1  ipcrm.cc
ipcs/: .gitignore  Makefile.am  Makefile.include  ipcs.1  ipcs.cc
kill/: .gitignore  Makefile.am  Makefile.include  gen-siglist.pl  kill.1  kill.cc
libpu/: .gitignore  Makefile.am  Makefile.include  alloc.c  alloc.cc  app.cc  cmdline.c  dict.c  dict.cc  file_mode.h  file_mode.y  lib.c  lib.cc  libcompress.c  libpu-tests.cc  path.c  path.cc  regex.cc  slist.c  strsplit.cc  term.c  term.cc  walk.c  walk.cc
link/: .gitignore  Makefile.am  Makefile.include  link-test  link.1  link.cc
ln/: .gitignore  Makefile.am  Makefile.include  ln-test  ln.1  ln.cc
logger/: .gitignore  Makefile.am  Makefile.include  logger.1  logger.cc
logname/: .gitignore  Makefile.am  Makefile.include  logname-test  logname.1  logname.cc
m4/: ChangeLog
mesg/: .gitignore  Makefile.am  Makefile.include  mesg-test  mesg.1  mesg.cc
mkdir/: .gitignore  Makefile.am  Makefile.include  mkdir-test  mkdir.1  mkdir.cc
mkfifo/: .gitignore  Makefile.am  Makefile.include  mkfifo.1  mkfifo.cc
mv/: .gitignore  Makefile.am  Makefile.include  mv.1  mv.cc
nice/: .gitignore  Makefile.am  Makefile.include  nice-test  nice.1  nice.cc
nohup/: .gitignore  Makefile.am  Makefile.include  nohup.1  nohup.cc
pathchk/: .gitignore  Makefile.am  Makefile.include  pathchk-test  pathchk.1  pathchk.cc
pax/: .gitignore  Makefile.am  Makefile.include  cpio.c  cpio.cc  main.c  main.cc  pax-options.data  pax.c  pax.cc  pax.h  ustar.c  ustar.cc  zip.c  zip.cc
platform/: Makefile.am
po/: .gitignore  ChangeLog  Makevars  POTFILES.in  fr.po  posixutils.pot
pwd/: .gitignore  Makefile.am  Makefile.include  pwd-test  pwd.1  pwd.cc
renice/: .gitignore  Makefile.am  Makefile.include  renice.1  renice.cc
rm/: .gitignore  Makefile.am  Makefile.include  rm-test  rm.1  rm.cc
rmdir/: .gitignore  Makefile.am  Makefile.include  rmdir-test  rmdir.1
sleep/: .gitignore  Makefile.am  Makefile.include  sleep-test  sleep.1  sleep.cc
sort/: .gitignore  Makefile.am  Makefile.include  sort-test  sort.1  sort.cc  test.data  test.t1  test.t2
split/: .gitignore  Makefile.am  Makefile.include  split.1  split.cc
strings/: .gitignore  Makefile.am  Makefile.include  strings.1
stty/: .gitignore  Makefile.am  Makefile.include  stty.1  stty.cc
tabs/: .gitignore  Makefile.am  Makefile.include  tabs.cc
tee/: .gitignore  Makefile.am  Makefile.include  tee.1  tee.cc
tests/: .gitignore  Makefile.am  basic-cksum  basic-cmp  basic-echo  basic-id  basic-ln  basic-rm  basic-tsort  basic-uniq  basic-wc  cksum-test.data  uniq.data1  uniq.data2
time/: .gitignore  Makefile.am  Makefile.include  time-test  time.1  time.cc
touch/: .gitignore  Makefile.am  Makefile.include  touch-test  touch.1  touch.cc
tput/: .gitignore  Makefile.am  Makefile.include  tput.1  tput.cc
true/: .gitignore  Makefile.am  Makefile.include  true-test  (+2 more)
(+62 files in other folders)
