
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	doc m4 po include platform libpu \
	asa basename cat chown cksum cmp comm compress \
	date df diff dirname echo env false getconf grep head \
	id ipcrm ipcs kill link ln logger logname mesg mkdir \
	mkfifo mv nice nohup pathchk pax pwd renice rm rmdir \
	sleep sort split strings stty tabs tee time touch tput \
	true tsort tty uname uniq unlink uuencode wc what

EXTRA_DIST = config.rpath mkinstalldirs	TODO gen-strmap.pl

