
EXTRA_DIST = \
	test.data	\
	cksum-test.data	\
	basic-cksum	\
	basic-cmp	\
	basic-echo	\
	basic-id	\
	basic-ln	\
	basic-rm	\
	basic-uniq	\
	uniq.data1	\
	uniq.data2	\
	basic-wc

TESTS = \
	basic-cksum	\
	basic-cmp	\
	basic-echo	\
	basic-id	\
	basic-ln	\
	basic-rm	\
	basic-uniq	\
	basic-wc

TESTS_ENVIRONMENT=top_srcdir=$(top_srcdir)

