
EXTRA_DIST = \
	test.data	\
	cksum-test.data	\
	basic-cksum	\
	basic-cmp	\
	basic-echo	\
	basic-id	\
	basic-ln	\
	basic-rm	\
	basic-tsort	\
	tsort.data1	\
	tsort.data2	\
	basic-uniq	\
	uniq.data1	\
	uniq.data2	\
	basic-wc

TESTS = \
	basic-cksum	\
	basic-cmp	\
	basic-echo	\
	basic-id	\
	basic-ln	\
	basic-rm	\
	basic-tsort	\
	basic-uniq	\
	basic-wc

TESTS_ENVIRONMENT=top_srcdir=$(top_srcdir)

