
EXTRA_DIST = \
	UNIMPLEMENTED		\
	asa.status		\
	basename.status		\
	cat.status		\
	cksum.status		\
	cmp.status		\
	comm.status		\
	compress.status		\
	date.status		\
	df.status		\
	dirname.status		\
	echo.status		\
	env.status		\
	false.status		\
	getconf.status		\
	grep.status		\
	head.status		\
	id.status		\
	ipcrm.status		\
	kill.status		\
	link.status		\
	ln.status		\
	logger.status		\
	logname.status		\
	mesg.status		\
	mkdir.status		\
	mkfifo.status		\
	mv.status		\
	nice.status		\
	nohup.status		\
	pathchk.status		\
	pwd.status		\
	renice.status		\
	rmdir.status		\
	rm.status		\
	sleep.status		\
	strings.status		\
	stty.status		\
	tabs.status		\
	tee.status		\
	time.status		\
	touch.status		\
	tput.status		\
	true.status		\
	tty.status		\
	uname.status		\
	uniq.status		\
	unlink.status		\
	uuencode.status		\
	wc.status		\
	what.status

